WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222513
border-image-slice blending does not account for the fill keyword
https://bugs.webkit.org/show_bug.cgi?id=222513
Summary
border-image-slice blending does not account for the fill keyword
Antoine Quint
Reported
2021-02-27 04:32:57 PST
border-image-slice blending does not account for the fill keyword
Attachments
Patch
(48.04 KB, patch)
2021-02-27 04:40 PST
,
Antoine Quint
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-02-27 04:40:31 PST
Created
attachment 421743
[details]
Patch
Antoine Quint
Comment 2
2021-02-27 06:29:27 PST
Committed
r273625
(
234671@main
): <
https://commits.webkit.org/234671@main
>
Radar WebKit Bug Importer
Comment 3
2021-02-27 06:30:16 PST
<
rdar://problem/74826135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug